# Console_Emulator

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml  buildPDF.yaml  format.yml
Team12/: LICENSE
Team12/games/: flappy_bird.slug  snake.slug
Team12/gpu/: box.slug  image.slug  input.slug
docs/: main.md
src/: BananaConsole.cpp  BananaConsole.h  BananaCpu.cpp  BananaCpu.h  BananaGpu.cpp  BananaGpu.h  BananaMemory.cpp  BananaMemory.h  main.cpp
tests/: README.md
tests/hws/: hello_world1.slug  hello_world2.slug  hello_world3.slug
